implemented user profile update functionality
users can now change all user information except username.

quote module now rounds to 2 decimals places exactly.

todo: make it so changing password is done by loginservices, so generatesalt and computehash can remain private.
